# prospector

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Procfile  README.md  README.new.md  TODO.md  docker-compose.yml  entrypoint.sh  fly.toml  gunicorn.conf.py  main.py  manage.py  pyproject.toml  test_gunicorn_local.sh  test_phase5_queries.py  test_pick_order_debug.py  test_tech_chart.py
data/: README.md  gdrive_match_mapping_overrides.json.example  match_winner_overrides.json.example  participant_name_overrides.json.example  pick_order_overrides.json.example  player_name_aliases.json
docs/: 20251007-code_review_report-action_items.md  IMPLEMENTATION_PLAN.md  README.md  code_review_report-summary.md  code_review_report.md  dark-light-theme-toggle-analysis.md  dark-theme-conversion-plan.md  database-schema.md  deployment-guide.md  developer-guide.md  feature-board-state-comparison.md  feature-win-rate-science-correlation.md  game-at-a-glace.md  initial-project-plan-implementation-summary.md  issue-turn-1-missing-science-data.md  map-viewer-assets.md  map-viewer-implementation.md  militia_analysis.md  project-plan-summary.md  project-plan.md  schema.sql  science-generation-guide.md  ui-architecture.md
scripts/: analytics_rulers.py  analyze_access_logs.py  apply_migration_001.py  create_masked_terrain_sprites.py  deploy_to_flyio.sh  diagnose_attachment.py  download_attachments.py  eval_nl_fixtures.json  eval_nl_query.py  export_schema.py  find_hex_spacing.py  find_hex_spacing2.py  fix_turn_counts.py  generate_gdrive_mapping.py  generate_match_narratives.py  import_attachments.py  import_tournaments.py  investigate_gdrive_mapping.py  link_players_to_participants.py  list_matches.py  list_matches_without_saves.py  match_pick_order_games.py  migrate_add_city_tables.py  migrate_add_player_statistics.py  migrate_participant_overrides.py  parse_tech_tree.py  sync_pick_order_data.py  (+25 more)
(+216 files in other folders)
