[project]
name = "tournament-visualizer"
version = "1.0.0"
description = "Tournament visualization dashboard for Old World game data"
authors = [{name = "Tournament Visualizer Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    # Core visualization and web framework
    "dash>=2.17.1",
    "plotly>=5.17.0",
    "dash-bootstrap-components>=1.5.0",
    # Database and data processing
    "duckdb>=0.9.1",
    "pandas>=2.1.3",
    # XML processing
    "lxml>=4.9.3",
    # Date and time utilities
    "python-dateutil>=2.8.2",
    # Note: hashlib and zipfile are built-in Python modules
    # Type hints
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.1.1",
    # Challonge API client
    "chyllonge>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=tournament_visualizer --cov-report=term-missing"
